# copper-pipe

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataset/: split_manifest.csv
docs/: DATA_ANALYSIS.md  EXPERIMENTS.md  REPORT.md
scripts/: predict.py  run_experiments.py  split_dataset.py  train_anomalib.py  train_supervised.py
src/copper_pipe/: __init__.py  data.py  evaluation.py  models.py  reporting.py  training.py
