[project]
name = "copper-pipe"
version = "0.1.0"
description = "Copper pipe surface anomaly detection with anomalib (PatchCore + EfficientAD)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "anomalib>=1.1.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "timm>=1.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "numpy>=1.26",
    "albumentations>=1.4.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copper_pipe"]

# RTX 5090 (Blackwell, sm_120) needs CUDA 12.8 wheels. Force torch/torchvision
# off PyPI's default (cu13) onto PyTorch's cu128 index.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line length handled by formatter
    "N812",   # allow lowercase imported as uppercase (e.g. torch.nn.functional as F)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # scripts may need module-level setup before imports

[tool.pyright]
include = ["src", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "results", "dataset"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
